Add New Websites for 2025 blog

--- a/blog-2.html
+++ b/blog-2.html
@@ -174,10 +174,22 @@ permalink: /blog-2/
                         Sybiltec's Blog Page 2
                     </li>
                 </ol>
-                <h2>How to Improve the SEO of Your Website</h2>
-                    <p>One of the most effective ways to increase traffic to your website is through search, so after you've launched your website, the next step is to work on the SEO (search engine optimisation) of your site, helping it to rank in the highest possible position in search engine results pages (SERPs). …</p>
+                    <h2>10 Common Website Mistakes and How to Avoid Them</h2>
+                    <p>Having analysed a huge number of websites over the past few years, I've noticed that a few mistakes tend to appear again and again. Have a read of the following article and make sure you aren't making the same mistakes on your website. …</p>
                     <br>
-                    <a class="btn-secondary" href="https://sybiltec.com/improve-website-seo/">Improve My SEO >></a>
+                    <a class="btn-secondary" href="https://sybiltec.com/common-website-mistakes/">Avoid the Mistakes >></a>
+                <div class="padding-top">
+                    <h2>How to Choose a Web Designer</h2>
+                    <p>Building a website may be a daunting task if you've never done it before or you don't have the time and/or skills to do it. Hiring a professional may be the best option, but with so much choice, it's difficult to find the right person for the job. Read this post to find out how you can choose the best web designer for your project. …</p>
+                    <br>
+                    <a class="btn-secondary" href="https://sybiltec.com/how-to-choose-web-designer/">Choose a Web Designer >></a>
+                </div>
+               <div class="padding-top">
+                    <h2>How to Improve the SEO of Your Website</h2>
+                        <p>One of the most effective ways to increase traffic to your website is through search, so after you've launched your website, the next step is to work on the SEO (search engine optimisation) of your site, helping it to rank in the highest possible position in search engine results pages (SERPs). …</p>
+                        <br>
+                        <a class="btn-secondary" href="https://sybiltec.com/improve-website-seo/">Improve My SEO >></a>
+               </div>
                 <div class="padding-top">
                     <h2>How to Backup Your WordPress Website with UpdraftPlus</h2>
                     <p>Ask yourself a question: when was the last time you backed up your WordPress website? Hopefully the answer is not "three years ago", or worse still, "never"! Imagine spending weeks or months on building your website, only to lose all the results of your hard work forever 😭 …</p>
@@ -219,18 +231,6 @@ permalink: /blog-2/
                     <p>If you are planning to sell your products or services online, it can be a difficult task choosing the best platform for your business. In this blog article, I explain the differences, pros and cons of the world's two most popular e-commerce store builders: Shopify and WooCommerce. …</p>
                     <br>
                 <a class="btn-secondary" href="https://sybiltec.com/shopify-woocommerce/">Shopify vs WooCommerce >></a>
-                </div>
-                <div class="padding-top">
-                    <h2>The Web Design Process Explained in 12 Easy Steps</h2>
-                    <p>Thank you so much for considering designing a website with me - you've certainly made the right choice! If you're wondering what the web design process is like, I've outlined the steps in this article to help you understand what is involved and help you decide if you're ready to start a project. …</p>
-                    <br>
-                    <a class="btn-secondary" href="https://sybiltec.com/web-design-process-explained-12-easy-steps/">The Web Design Process >></a>
-                </div>
-                <div class="padding-top">
-                    <h2>A Guide to Updating Your WordPress Website</h2>
-                    <p>If you own a WordPress website, you need to be aware that the work doesn't end once your site has been launched. A WordPress website needs to be carefully maintained in order to keep it functioning well, ensuring that you benefit from the latest features and security updates. …</p>
-                    <br>
-                    <a class="btn-secondary" href="https://sybiltec.com/guide-to-updating-your-wordpress-website/">Update WordPress >></a>
                 </div>
                 <div class="center padding-top padding-bottom"><a href="https://sybiltec.com/blog/">Page 1</a> | <a href="https://sybiltec.com/blog-3/">Page 3</a></div>
             </div>
