--- a/blog-3.html
+++ b/blog-3.html
@@ -174,10 +174,22 @@ permalink: /blog-3/
                         Sybiltec's Blog Page 3
                     </li>
                 </ol>
-                <h2>Are You Inadvertently Abusing Your Customers' Data?</h2>
-                <p>Have you stopped to think about how you are using your customers' data? If not, then you probably don't have a privacy notice - a crucial document for creating a compliant and trustworthy website. In this blog article, we present to you a few areas to consider when creating your privacy notice. …</p>
-                <br>
-                <a class="btn-secondary" href="https://sybiltec.com/are-you-inadvertently-abusing-your-customers-data/">Use Data Appropriately >></a>
+                    <h2>The Web Design Process Explained in 12 Easy Steps</h2>
+                    <p>Thank you so much for considering designing a website with me - you've certainly made the right choice! If you're wondering what the web design process is like, I've outlined the steps in this article to help you understand what is involved and help you decide if you're ready to start a project. …</p>
+                    <br>
+                    <a class="btn-secondary" href="https://sybiltec.com/web-design-process-explained-12-easy-steps/">The Web Design Process >></a>
+                <div class="padding-top">
+                    <h2>A Guide to Updating Your WordPress Website</h2>
+                    <p>If you own a WordPress website, you need to be aware that the work doesn't end once your site has been launched. A WordPress website needs to be carefully maintained in order to keep it functioning well, ensuring that you benefit from the latest features and security updates. …</p>
+                    <br>
+                    <a class="btn-secondary" href="https://sybiltec.com/guide-to-updating-your-wordpress-website/">Update WordPress >></a>
+                </div>
+                <div class="padding-top">
+                    <h2>Are You Inadvertently Abusing Your Customers' Data?</h2>
+                    <p>Have you stopped to think about how you are using your customers' data? If not, then you probably don't have a privacy notice - a crucial document for creating a compliant and trustworthy website. In this blog article, we present to you a few areas to consider when creating your privacy notice. …</p>
+                    <br>
+                    <a class="btn-secondary" href="https://sybiltec.com/are-you-inadvertently-abusing-your-customers-data/">Use Data Appropriately >></a>
+                </div>
                 <div class="padding-top">
                     <h2>The Importance of Contact Information on Your Website</h2>
                     <p>Our recent LinkedIn poll found that allowing your customers to easily contact you via your website is the most important factor when creating a trustworthy website. Read on to find out why, and our advice on how to make your contact information more visible on your website. …</p>
