--- a/blog.html
+++ b/blog.html
@@ -174,10 +174,16 @@ permalink: /blog/
                         Sybiltec's Blog
                     </li>
                 </ol>
-                <h2>Free Workshops for Greenwich Borough</h2>
-                <p>We are pleased to be running a new series of free workshops for businesses and organisations based in the Royal Borough of Greenwich. Attend our workshops to learn the vital skills and strategies you need to succeed. …</p>
+                <h2>New Websites Launched in 2025</h2>
+                    <p>We are pleased to announce the launch of several new websites in 2025! We've been very busy helping small businesses improve their online presence. View our latest projects here. …</p>
                     <br>
-                    <a class="btn-secondary" href="https://sybiltec.com/free-workshops-greenwich-borough/">Register Now >></a>
+                    <a class="btn-secondary" href="https://sybiltec.com/new-websites-2025/">See New Websites >></a>
+                <div class="padding-top">
+                    <h2>Free Workshops for Greenwich Borough</h2>
+                    <p>We are pleased to be running a new series of free workshops for businesses and organisations based in the Royal Borough of Greenwich. Attend our workshops to learn the vital skills and strategies you need to succeed. …</p>
+                        <br>
+                        <a class="btn-secondary" href="https://sybiltec.com/free-workshops-greenwich-borough/">Register Now >></a>
+                </div>
                 <div class="padding-top">
                     <h2>Thriving Through Change: Smart Website Strategies for Small Business Success</h2>
                     <p>In the digital age, a well-optimised website is more than just a business card; it's a powerful tool to ensure the success and resilience of your business during uncertain times. We explore the critical strategies that can transform your website into a robust platform for growth. …</p>
@@ -225,18 +231,6 @@ permalink: /blog/
                     <p>WordPress is one of the most popular website builder platforms on the internet. One reason why is the vast selection of plugins available, allowing you to build almost anything you can imagine. WordPress provides you with the essential tools you need to create a blog, but unless you are building a very basic site, you will need at least a few plugins to give you those additional functionalities. …</p>
                     <br>
                     <a class="btn-secondary" href="https://sybiltec.com/best-free-wordpress-plugins/">Best WordPress Plugins >></a>
-                </div>
-                <div class="padding-top">
-                    <h2>10 Common Website Mistakes and How to Avoid Them</h2>
-                    <p>Having analysed a huge number of websites over the past few years, I've noticed that a few mistakes tend to appear again and again. Have a read of the following article and make sure you aren't making the same mistakes on your website. …</p>
-                    <br>
-                    <a class="btn-secondary" href="https://sybiltec.com/common-website-mistakes/">Avoid the Mistakes >></a>
-                </div>
-                <div class="padding-top">
-                    <h2>How to Choose a Web Designer</h2>
-                    <p>Building a website may be a daunting task if you've never done it before or you don't have the time and/or skills to do it. Hiring a professional may be the best option, but with so much choice, it's difficult to find the right person for the job. Read this post to find out how you can choose the best web designer for your project. …</p>
-                    <br>
-                    <a class="btn-secondary" href="https://sybiltec.com/how-to-choose-web-designer/">Choose a Web Designer >></a>
                 </div>
                 <div class="center padding-top padding-bottom"><a href="https://sybiltec.com/blog-2/">Page 2</a> | <a href="https://sybiltec.com/blog-3/">Page 3</a></div>
             </div>
