--- a/index.html
+++ b/index.html
@@ -309,6 +309,17 @@
                     <p>Read our selection of blog posts for web design tips and advice, guides to help you make the most of your website, and the latest news from Sybiltec.</p>
                 </div>
                 <div class="row">
+                    <div class="col-3">  
+                        <div class="blog-card">   
+                            <a href="https://sybiltec.com/new-websites-2025/"><img src="images/wooden-gavel-sitting-on-computer-keyboard.webp" alt="Wooden gavel sitting on computer keyboard"></a>
+                                <div class="blog-card-text">                      
+                                <a href="https://sybiltec.com/new-websites-2025/" class="blog-title">New Websites Launched in 2025</a>
+                                <p>22 July 2025</p>
+                                <p>We've been busy designing new websites to help our clients thrive. See our latest website launches here.</p>
+                                <a class="btn-secondary" href="https://sybiltec.com/new-websites-2025/">New Websites for 2025 >></a>
+                            </div>
+                        </div>
+                    </div>
                     <div class="col-3">          
                         <div class="blog-card">
                             <a href="https://sybiltec.com/free-workshops-greenwich-borough/"><img src="images/person-holding-black-iphone-5-400x209.webp" alt="Person holding black iPhone 5"></a>  
@@ -342,17 +353,6 @@
                                 <p>18 June 2024</p>
                                 <p>We explore the critical strategies that transform your website into a robust platform for growth.</p>
                                 <a class="btn-secondary" href="https://sybiltec.com/strategies-for-business-success/">Smart Strategies >></a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-3">  
-                        <div class="blog-card">   
-                            <a href="https://sybiltec.com/website-compliance-quick-guide/"><img src="images/wooden-gavel-sitting-on-computer-keyboard.webp" alt="Wooden gavel sitting on computer keyboard"></a>
-                                <div class="blog-card-text">                      
-                                <a href="https://sybiltec.com/website-compliance-quick-guide/" class="blog-title">A Quick Guide to Website Compliance</a>
-                                <p>05 June 2024</p>
-                                <p>What is website compliance? Read our quick guide to find out what is legally required on your website.</p>
-                                <a class="btn-secondary" href="https://sybiltec.com/website-compliance-quick-guide/">Website Compliance >></a>
                             </div>
                         </div>
                     </div>
