--- a/sitemap.html
+++ b/sitemap.html
@@ -237,6 +237,7 @@ permalink: /sitemap/
                     <li><a href="https://sybiltec.com/install-ga4-wix-website/">How to Install GA4 on Your Wix Website</a></li>
                     <li><a href="https://sybiltec.com/install-ga4-wordpress-website/">How to Install GA4 on Your WordPress Website</a></li>
                     <li><a href="https://sybiltec.com/google-search-console/">How to Use Google Search Console: a Quick Guide</a></li>
+                    <li><a href="https://sybiltec.com/new-websites-2025/">New Websites Launched in 2025</a></li>
                     <li><a href="https://sybiltec.com/6-tips-for-surviving-remote-working/">Remote Working: How to Survive with 6 Tips</a></li>
                     <li><a href="https://sybiltec.com/shopify-woocommerce/">Shopify vs WooCommerce: What Are the Differences?</a></li>
                     <li><a href="https://sybiltec.com/importance-of-contact-information-on-your-website/">The Importance of Contact Information on Your Website</a></li>
