--- a/clients.html
+++ b/clients.html
@@ -62,7 +62,7 @@ permalink: /clients/
         "address": {
             "@type": "PostalAddress",
             "streetAddress": "2 Veridion Way",
-            "addressLocality": "Bexley",
+            "addressLocality": "Erith",
             "addressRegion": "London",
             "postalCode": "DA18 4AL",
             "addressCountry": "GB"
@@ -106,7 +106,7 @@ permalink: /clients/
         "address": {
             "@type": "PostalAddress",
             "streetAddress": "2 Veridion Way",
-            "addressLocality": "Bexley",
+            "addressLocality": "Erith",
             "addressCountry": "GB",
             "addressRegion": "London",
             "postalCode": "DA18 4AL"
