--- a/5-best-tools-for-remote-working.html
+++ b/5-best-tools-for-remote-working.html
@@ -80,7 +80,7 @@ permalink: /5-best-tools-for-remote-working/
         "address": {
             "@type": "PostalAddress",
             "streetAddress": "2 Veridion Way",
-            "addressLocality": "Bexley",
+            "addressLocality": "Erith",
             "addressRegion": "London",
             "postalCode": "DA18 4AL",
             "addressCountry": "GB"
@@ -124,7 +124,7 @@ permalink: /5-best-tools-for-remote-working/
         "address": {
             "@type": "PostalAddress",
             "streetAddress": "2 Veridion Way",
-            "addressLocality": "Bexley",
+            "addressLocality": "Erith",
             "addressCountry": "GB",
             "addressRegion": "London",
             "postalCode": "DA18 4AL"
