--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@ permalink: /about/
         "address": {
             "@type": "PostalAddress",
             "streetAddress": "2 Veridion Way",
-            "addressLocality": "Bexley",
+            "addressLocality": "Erith",
             "addressRegion": "London",
             "postalCode": "DA18 4AL",
             "addressCountry": "GB"
@@ -108,7 +108,7 @@ permalink: /about/
         "address": {
             "@type": "PostalAddress",
             "streetAddress": "2 Veridion Way",
-            "addressLocality": "Bexley",
+            "addressLocality": "Erith",
             "addressCountry": "GB",
             "addressRegion": "London",
             "postalCode": "DA18 4AL"
