--- a/guide-to-updating-your-wordpress-website.html
+++ b/guide-to-updating-your-wordpress-website.html
@@ -84,7 +84,7 @@ permalink: /guide-to-updating-your-wordpress-website/
         "address": {
             "@type": "PostalAddress",
             "streetAddress": "2 Veridion Way",
-            "addressLocality": "Bexley",
+            "addressLocality": "Erith",
             "addressRegion": "London",
             "postalCode": "DA18 4AL",
             "addressCountry": "GB"
@@ -128,7 +128,7 @@ permalink: /guide-to-updating-your-wordpress-website/
         "address": {
             "@type": "PostalAddress",
             "streetAddress": "2 Veridion Way",
-            "addressLocality": "Bexley",
+            "addressLocality": "Erith",
             "addressCountry": "GB",
             "addressRegion": "London",
             "postalCode": "DA18 4AL"
