--- a/how-does-a-good-website-showcase-trust.html
+++ b/how-does-a-good-website-showcase-trust.html
@@ -85,7 +85,7 @@ permalink: /how-does-a-good-website-showcase-trust/
         "address": {
             "@type": "PostalAddress",
             "streetAddress": "2 Veridion Way",
-            "addressLocality": "Bexley",
+            "addressLocality": "Erith",
             "addressRegion": "London",
             "postalCode": "DA18 4AL",
             "addressCountry": "GB"
@@ -129,7 +129,7 @@ permalink: /how-does-a-good-website-showcase-trust/
         "address": {
             "@type": "PostalAddress",
             "streetAddress": "2 Veridion Way",
-            "addressLocality": "Bexley",
+            "addressLocality": "Erith",
             "addressCountry": "GB",
             "addressRegion": "London",
             "postalCode": "DA18 4AL"
