--- a/importance-of-contact-information-on-your-website.html
+++ b/importance-of-contact-information-on-your-website.html
@@ -85,7 +85,7 @@ permalink: /importance-of-contact-information-on-your-website/
         "address": {
             "@type": "PostalAddress",
             "streetAddress": "2 Veridion Way",
-            "addressLocality": "Bexley",
+            "addressLocality": "Erith",
             "addressRegion": "London",
             "postalCode": "DA18 4AL",
             "addressCountry": "GB"
@@ -129,7 +129,7 @@ permalink: /importance-of-contact-information-on-your-website/
         "address": {
             "@type": "PostalAddress",
             "streetAddress": "2 Veridion Way",
-            "addressLocality": "Bexley",
+            "addressLocality": "Erith",
             "addressCountry": "GB",
             "addressRegion": "London",
             "postalCode": "DA18 4AL"
