--- a/web-design-process-explained-12-easy-steps.html
+++ b/web-design-process-explained-12-easy-steps.html
@@ -85,7 +85,7 @@ permalink: /web-design-process-explained-12-easy-steps/
         "address": {
             "@type": "PostalAddress",
             "streetAddress": "2 Veridion Way",
-            "addressLocality": "Bexley",
+            "addressLocality": "Erith",
             "addressRegion": "London",
             "postalCode": "DA18 4AL",
             "addressCountry": "GB"
@@ -129,7 +129,7 @@ permalink: /web-design-process-explained-12-easy-steps/
         "address": {
             "@type": "PostalAddress",
             "streetAddress": "2 Veridion Way",
-            "addressLocality": "Bexley",
+            "addressLocality": "Erith",
             "addressCountry": "GB",
             "addressRegion": "London",
             "postalCode": "DA18 4AL"
