Update case studies

--- a/bexley-linkup.html
+++ b/bexley-linkup.html
@@ -31,11 +31,11 @@ permalink: /bexley-linkup/
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Bexley Linkup | Case Study | Sybiltec Web Design</title>       
+        <title>Bexley Linkup | Free Business Networking Events | Case Study</title>       
         <meta name="Description" content="Bexley Linkup was created by a group of small business owners to connect sole traders, entrepreneurs and established businesses in Bexley and beyond.">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Bexley Linkup | Case Study | Sybiltec Web Design" />
+        <meta property="og:title" content="Bexley Linkup | Free Business Networking Events | Case Study" />
         <meta property="og:description" content="Bexley Linkup was created by a group of small business owners to connect sole traders, entrepreneurs and established businesses in Bexley and beyond." />
         <meta property="og:url" content="https://sybiltec.com/bexley-linkup/" />
         <meta property="og:site_name" content="Sybiltec" />
