--- a/cnt-associates.html
+++ b/cnt-associates.html
@@ -31,11 +31,11 @@ permalink: /cnt-associates/
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>CNT Associates | Case Study | Sybiltec Web Design</title>       
+        <title>CNT Associates | Business Support in Bexley | Case Study</title>       
         <meta name="Description" content="CNT Associates is a business support and fundraising organisation in Bexley, South East London. Read our case study on how we transformed CNT's website.">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="CNT Associates | Case Study | Sybiltec Web Design" />
+        <meta property="og:title" content="CNT Associates | Business Support in Bexley | Case Study" />
         <meta property="og:description" content="CNT Associates is a business support and fundraising organisation in Bexley, South East London. Read our case study on how we transformed CNT's website." />
         <meta property="og:url" content="https://sybiltec.com/cnt-associates/" />
         <meta property="og:site_name" content="Sybiltec" />
