--- a/crazy-thumbs.html
+++ b/crazy-thumbs.html
@@ -31,12 +31,12 @@ permalink: /crazy-thumbs/
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Crazy Thumbs | Case Study | Sybiltec Web Design</title>       
-        <meta name="Description" content="Crazy Thumbs sells vintage and contemporary games, consoles and accessories. Learn how we developed Crazy Thumbs' new e-commerce store with Shopify.">
+        <title>Crazy Thumbs | Games & Consoles Store Tooting | Case Study</title>       
+        <meta name="Description" content="Crazy Thumbs sells vintage and contemporary games, consoles & accessories. Learn how we developed Crazy Thumbs' new e-commerce store with Shopify.">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Crazy Thumbs | Case Study | Sybiltec Web Design" />
-        <meta property="og:description" content="Crazy Thumbs sells vintage and contemporary games, consoles and accessories. Learn how we developed Crazy Thumbs' new e-commerce store with Shopify." />
+        <meta property="og:title" content="Crazy Thumbs | Games & Consoles Store Tooting | Case Study" />
+        <meta property="og:description" content="Crazy Thumbs sells vintage and contemporary games, consoles & accessories. Learn how we developed Crazy Thumbs' new e-commerce store with Shopify." />
         <meta property="og:url" content="https://sybiltec.com/crazy-thumbs/" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltec-logo-social.png" />
