--- a/fortis-dpc.html
+++ b/fortis-dpc.html
@@ -31,12 +31,12 @@ permalink: /fortis-dpc/
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Fortis DPC | Case Study | Sybiltec Web Design</title>       
-        <meta name="Description" content="Fortis DPC is a leading provider of cyber security, data protection compliance, GDPR and ISO solutions. Read Fortis' website redesign case study here.">
+        <title>Fortis DPC | GDPR, ISO, Cyber Security, PCI DSS | Case Study</title>       
+        <meta name="Description" content="Fortis DPC is a leading provider of cyber security, data protection compliance, GDPR and ISO solutions. Read Fortis DPC's website redesign case study here.">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Fortis DPC | Case Study | Sybiltec Web Design" />
-        <meta property="og:description" content="Fortis DPC is a leading provider of cyber security, data protection compliance, GDPR and ISO solutions. Read Fortis' website redesign case study here." />
+        <meta property="og:title" content="Fortis DPC | GDPR, ISO, Cyber Security, PCI DSS | Case Study" />
+        <meta property="og:description" content="Fortis DPC is a leading provider of cyber security, data protection compliance, GDPR and ISO solutions. Read Fortis DPC's website redesign case study here." />
         <meta property="og:url" content="https://sybiltec.com/fortis-dpc/" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltec-logo-social.png" />
