--- a/happily-clappily-ever-laughter.html
+++ b/happily-clappily-ever-laughter.html
@@ -31,11 +31,11 @@ permalink: /happily-clappily-ever-laughter/
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Happily Clappily Ever Laughter | Sybiltec Web Design</title>       
+        <title>Happily Clappily Ever Laughter | Laughter Yoga | Case Study</title>       
         <meta name="Description" content="Happily Clappily Ever Laughter is a wellbeing organisation delivering laughter yoga workshops. Learn how we designed Happily Clappily's first website.">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Happily Clappily Ever Laughter | Sybiltec Web Design" />
+        <meta property="og:title" content="Happily Clappily Ever Laughter | Laughter Yoga | Case Study" />
         <meta property="og:description" content="Happily Clappily Ever Laughter is a wellbeing organisation delivering laughter yoga workshops. Learn how we designed Happily Clappily's first website." />
         <meta property="og:url" content="https://sybiltec.com/happily-clappily-ever-laughter/" />
         <meta property="og:site_name" content="Sybiltec" />
