--- a/jenup.html
+++ b/jenup.html
@@ -31,12 +31,12 @@ permalink: /jenup/
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>JenUp | Case Study | Sybiltec Web Design</title>       
-        <meta name="Description" content="JenUp is a non-profit making organisation supporting people with eating disorders. We developed an LMS on LearnDash for JenUp to host their online courses.">
+        <title>JenUp CIC | Eating Disorder & Body Image Support | Case Study</title>       
+        <meta name="Description" content="JenUp CIC is a non-profit organisation supporting people with eating disorders. We developed an LMS on LearnDash for JenUp to host their online courses.">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="JenUp | Case Study | Sybiltec Web Design" />
-        <meta property="og:description" content="JenUp is a non-profit making organisation supporting people with eating disorders. We developed an LMS on LearnDash for JenUp to host their online courses." />
+        <meta property="og:title" content="JenUp CIC | Eating Disorder & Body Image Support | Case Study" />
+        <meta property="og:description" content="JenUp CIC is a non-profit organisation supporting people with eating disorders. We developed an LMS on LearnDash for JenUp to host their online courses." />
         <meta property="og:url" content="https://sybiltec.com/jenup/" />
         <meta property="og:site_name" content="Sybiltec" />
         <meta property="og:image" content="https://sybiltec.com/images/logos/sybiltec-logo-social.png" />
