--- a/nerowireart.html
+++ b/nerowireart.html
@@ -31,11 +31,11 @@ permalink: /nerowireart/
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>NeroWireArt | Case Study | Sybiltec Web Design</title>       
+        <title>NeroWireArt | Beautiful Bonsai Tree Wire Art | Case Study</title>       
         <meta name="Description" content="NeroWireArt creates beautiful bonsai wire trees to enhance your home décor. We designed & developed NeroWireArt's website to showcase the unique pieces.">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="NeroWireArt | Case Study | Sybiltec Web Design" />
+        <meta property="og:title" content="NeroWireArt | Beautiful Bonsai Tree Wire Art | Case Study" />
         <meta property="og:description" content="NeroWireArt creates beautiful bonsai wire trees to enhance your home décor. We designed & developed NeroWireArt's website to showcase the unique pieces." />
         <meta property="og:url" content="https://sybiltec.com/nerowireart/" />
         <meta property="og:site_name" content="Sybiltec" />
