--- a/lcg-lift-consultancy.html
+++ b/lcg-lift-consultancy.html
@@ -31,11 +31,11 @@ permalink: /lcg-lift-consultancy/
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>LCG Lift Consultancy | Case Study | Sybiltec Web Design</title>       
+        <title>LCG Lift Consultancy | London Lift Consultants | Case Study</title>       
         <meta name="Description" content="LCG Lift Consultancy offers design, installation, modernisation, condition reports and maintenance. We refreshed LCG's website for a modern look and feel.">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="LCG Lift Consultancy | Case Study | Sybiltec Web Design" />
+        <meta property="og:title" content="LCG Lift Consultancy | London Lift Consultants | Case Study" />
         <meta property="og:description" content="LCG Lift Consultancy offers design, installation, modernisation, condition reports and maintenance. We refreshed LCG's website for a modern look and feel." />
         <meta property="og:url" content="https://sybiltec.com/lcg-lift-consultancy/" />
         <meta property="og:site_name" content="Sybiltec" />
