--- a/new-haw-community-centre.html
+++ b/new-haw-community-centre.html
@@ -31,11 +31,11 @@ permalink: /new-haw-community-centre/
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>New Haw Community Centre | Case Study | Sybiltec Web Design</title>       
+        <title>New Haw Community Centre | Addlestone, Surrey | Case Study</title>       
         <meta name="Description" content="New Haw Community Centre's new website enjoys a fresh, modern design and a streamlined booking system, thanks to Sybiltec's website redesign service.">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="New Haw Community Centre | Case Study | Sybiltec Web Design" />
+        <meta property="og:title" content="New Haw Community Centre | Addlestone, Surrey | Case Study" />
         <meta property="og:description" content="New Haw Community Centre's new website enjoys a fresh, modern design and a streamlined booking system, thanks to Sybiltec's website redesign service." />
         <meta property="og:url" content="https://sybiltec.com/new-haw-community-centre/" />
         <meta property="og:site_name" content="Sybiltec" />
