Update new websites for 2025

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                 <div class="row">
                     <div class="col-3"><img src="images/clients/bexley-linkup.webp" alt="Bexley Linkup"><p class="customer">Bexley Linkup</p></div>
                     <div class="col-3"><img src="images/clients/emrys.webp" alt="Emrys Group International"><p class="customer">Emrys Group International</p></div>
-                    <div class="col-3"><img src="images/clients/fortis-dpc.webp" alt="Fortis DPC (Data Protection Compliance)"><p class="customer">Fortis Data Protection Compliance</p></div>
+                    <div class="col-3"><img src="images/clients/fortis-dpc.webp" alt="Fortis DPC (Data Protection Compliance)"><p class="customer">Fortis DPC</p></div>
                     <div class="col-3"><img src="images/clients/ken-chu-videography.webp" alt="Ken Chu Videography"><p class="customer">Ken Chu Videography</p></div>
                 </div>
                 <div class="row">
