--- a/new-websites-2025.html
+++ b/new-websites-2025.html
@@ -203,7 +203,7 @@ permalink: /new-websites-2025/
                 
                 <div class="row">
                     <div class="col-6">
-                        <img src="images/clients/realizzato.png">
+                        <img src="https://sybiltec.com/images/clients/realizzato.png">
                     </div>
                     <div class="col-6">
                         <h2>Realizzato</h2>
@@ -233,13 +233,13 @@ permalink: /new-websites-2025/
                         <div class="padding-top padding-bottom"><a class="btn-primary" href="https://kenchu.co.uk/" target="_blank" rel="noopener noreferrer">Visit Ken Chu Videography</a></div>
                     </div>
                     <div class="col-6">
-                        <img src="images/clients/ken-chu-videography.png">
+                        <img src="https://sybiltec.com/images/clients/ken-chu-videography.png">
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="col-6">
-                        <img src="images/clients/good-mental-health.png">
+                        <img src="https://sybiltec.com/images/clients/good-mental-health.png">
                     </div>
                     <div class="col-6">
                         <h2>Good Mental Health</h2>
@@ -267,7 +267,7 @@ permalink: /new-websites-2025/
                         <div class="padding-top padding-bottom"><a class="btn-primary" href="https://techdiplomacyacademy.org/" target="_blank" rel="noopener noreferrer">Visit Tech Diplomacy Academy</a></div>
                     </div>
                     <div class="col-6">
-                        <img src="images/clients/tech-diplomacy-academy.png">
+                        <img src="https://sybiltec.com/images/clients/tech-diplomacy-academy.png">
                     </div>
                 </div>
 
